--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,6 +3,9 @@ plugins {
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
+    // Add the Google services Gradle plugin
+    id("com.google.gms.google-services")
+    // ...
 }
 
 def localProperties = new Properties()
@@ -38,7 +41,7 @@ android {
         applicationId = "com.example.coffee_shop"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = flutter.minSdkVersion
+        minSdk 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
@@ -56,3 +59,5 @@ android {
 flutter {
     source = "../.."
 }
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services' // Add this at the bottom
